<resources>
    <string name="app_name">mobile_tour</string>
    <string name="title_home">Home</string>
    <string name="title_question">Question</string>
    <string name="title_create_route">Create Route</string>
    <string name="title_profile">Profile</string>
    <string name="title_right_bar">Categories</string>
    <string name="right_bar_title_1">title 1</string>
    <string name="right_bar_title_2">title 2</string>
    <string name="right_bar_title_3">title 3</string>
    <string name="right_bar_header_title">title main</string>
    <string name="right_bar_header_title_sub">title sub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email"> Почта</string>
    <string name="prompt_name"> Имя</string>
    <string name="prompt_password"> Пароль</string>
    <string name="action_sign_in">Get started</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="topofKazan">Главное в Казани</string>
    <string name="dostKazan">достопримечательности</string>
    <string name="popCatKazan">популярные категории</string>
    <string name="clearall"><u>очистить всё</u></string>
</resources>