<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">





    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/topofKazan"
        android:textColor="#000000"
        android:textSize="28sp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_home_dost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="6dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/dostKazan"
        android:textColor="#000000"
        android:background="@color/nav_gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_home"/>


    <androidx.viewpager2.widget.ViewPager2

        android:id="@+id/viewpagerHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/nav_gray"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:paddingBottom="20dp"
        android:paddingTop="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text_home_dost"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/popCatKazan"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/viewpagerHomeFragment_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewpagerHomeFragment" />

    <androidx.viewpager2.widget.ViewPager2

        android:id="@+id/viewpagerHomeFragment_category"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="70dp"
        android:paddingTop="25dp"
        android:paddingBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewpagerHomeFragment" />





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
